# balance_robot

./: .gitmodules  CMakeLists.txt  EEPROMAnything.h  EKF.cpp  EKF.h  PID.h  README.md  balance_robot.h  balance_robot.ino  motor.h  upload.py  utils.h
analysis/: motor_calibrate.py  serial_plot.py
analysis/angle_control/: angle_control.ipynb
cmake/: ArduinoToolchain.cmake
src/: Bluetooth.h  CMakeLists.txt  Kalman.cpp  Kalman.h  LowPassFilter.cpp  LowPassFilter.h  PID.h  balance_robot.h  balance_robot.ino  motor.h  utils.h
